# qdrant-edge-amalgamation

./: .gitignore  README.md  amalgamate.py  fixup.sh
edge_example/: .gitignore  Cargo.toml
edge_example/src/: demo.rs  facet_test.rs
