[package]
name = "edge_example"
version = "0.1.0"
edition = "2024"
autobins = false

[dependencies]
edge = { path = "../qdrant-edge-amalgamation", package = "qdrant-edge" }

uuid = { version = "1", features = ["v4"] }
anyhow = "1"
serde_json = "1"
tempfile = "3"
ordered-float = "5"
fs-err = "3"

[[bin]]
name = "demo"
path = "src/demo.rs"

[[bin]]
name = "edge-cli"
path = "src/edge-cli.rs"

[[bin]]
name = "facet-test"
path = "src/facet_test.rs"
